syntax = "proto2";

package mesos.modules.overlay.internal;

import "overlay/overlay.proto";

// NOTE: This option is necessary if any protobufs defined in this file
// are used in libprocess message routing (i.e. `install<T>(...)`).
// See: https://issues.apache.org/jira/browse/MESOS-6971
option cc_enable_arenas = true;


// Message used by the Agent to register with the overlay-master.
message RegisterAgentMessage {
  required AgentNetworkConfig network_config = 1;
}


// Message used by the Master to inform the Agent about configured
// overlay networks.
message UpdateAgentOverlaysMessage {
  repeated AgentOverlayInfo overlays = 1;
}


// Message used by the Agent to inform the Master that it has received
// the configuration and has tried to configure all the networks. The
// message informs the Master about the status of the networks on the
// Agent.
message AgentRegisteredMessage {
  repeated AgentOverlayInfo overlays = 1;
}


// Used by the Master to inform the Agent that it has received the
// updated network state.
message AgentRegisteredAcknowledgement {
}


// Used by Agent to intimate the master if it needs subnets allocated
// for overlays, and given a subnet if it needs to configure
// the Mesos and Docker bridges for the overlays.
//
// NOTE: This is useful when the Agent module just needs to configure
// the VTEP IP and VTEP MAC, and act as a gateway to all the overlays,
// and doesn't need to host containers on the overlay. An example
// use-case would be when the Agent module is run on the Master. This
// setup would give access to components running on the Master to
// directly talk to containers on the overlay.
message AgentNetworkConfig {
  optional bool allocate_subnet = 1 [default = true];
  optional bool mesos_bridge = 2 [default = true];
  optional bool docker_bridge = 3 [default = true];
  // The overhead of the VxLAN header is 54 bytes:
  // Ethernet(18) + IP(20) + udp (8) + VxLAN(8) = 54
  // Ideally we should be setting the default MTU to 1500 - 54 = 1446,
  // however to support GCE we are setting the default MTU value to
  // 1420 bytes.
  optional uint32 overlay_mtu = 4 [default = 1420];

  // Timeout for calls to docker deamon and networking tools, ms
  optional uint32 command_timeout = 5 [default = 15000];
  optional bool enable_ipv6 = 6 [default = true];
}


// Used by Agent to store the configuration specified by the operator.
message AgentConfig {
  optional string master = 1;
  required string cni_dir = 2;
  optional AgentNetworkConfig network_config = 3;
  // Number of times the agent will attempt to configure virtual
  // networks by re-registering with the master.
  optional uint32 max_configuration_attempts = 4 [default = 4];
}


// Used by the Master to determine the zookeeper config required for
// leader election by the replicated log.
message ZookeeperConfig {
  optional string url = 1;
  optional uint32 quorum = 2;
  optional uint32 session_timeout = 3 [default = 10];
}


// Used by the Master to store the configuration specified by the
// operator.
message MasterConfig {
  optional ZookeeperConfig zk = 1;
  optional string replicated_log_dir = 2;
  required NetworkConfig network = 3;
}
